wireframe for skills section

--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
 		</main>
 
 		<nav id="downArrow">
-			<img src="assets/images/aDown.png">
+			<p>Learn more about what I do...</p>
+			<img style="width: 30px; height: auto;" src="assets/images/aDown.png" alt="arrow pointing down">
 		</nav>
 
-		<aside>
+		<header>
 			Recent Work
-		</aside>
+		</header>
 
 		<section id="portfolioSection">
 			<div class="portRow">
-				<div class="project">
-					Size
+				<div id="size" class="project">
+					<p>Size</p>
 				</div>
 				<div class="project">
 					VR Researc
@@ -79,21 +80,40 @@
 			</div>
 		</section>
 
-		<aside>
+		<header>
 			Skills
-		</aside>
+		</header>
 
-		<aside>
+		<section id="skillsSection">
+			<div class="skills">
+				<p>I understand the challenges in programming that often seem to limit creativity. I find solutions to this challenges while making code a work of art.</p>
+			</div>
+
+			<div class="skills">
+				<div class="soft">
+					<h3>Communication</h3>
+					<p>hi my name is carlos</p>
+				</div>
+
+				<div class="soft">
+					<h3>Organization</h3>
+					<p>hi my mane is carlos agian</p>
+				</div>
+			</div>
+			
+		</section>
+
+		<header>
 			Featured Project
-		</aside>
+		</header>
 
-		<aside>
+		<header>
 			Social
-		</aside>
+		</header>
 
-		<aside>
+		<header>
 			Phylosophy
-		</aside>
+		</header>
 
 
 
