wireframed featured section

--- a/index.html
+++ b/index.html
@@ -100,12 +100,19 @@
 					<p>hi my mane is carlos agian</p>
 				</div>
 			</div>
-			
 		</section>
 
 		<header>
 			Featured Project
 		</header>
+
+		<section id="ftSection">
+			<div id="featured">
+				<p>hi this is a good one</p>
+			</div>
+			<p>Virtual Reality Research</p>
+			<p>Description of project</p>
+		</section>
 
 		<header>
 			Social
