wireframed social and philosophy sections

--- a/index.html
+++ b/index.html
@@ -118,9 +118,28 @@
 			Social
 		</header>
 
+		<section id="socialSection">
+			<div class="social">
+				<ul>
+					<li><a href="#"></a>GitHub</li>
+					<li><a href="#"></a>LinkedIn</li>
+					<li><a href="#"></a>Twitter</li>
+				</ul>
+				
+			</div>
+			<div class="social">
+				<p>Get in touch:</p>
+				<p>carlosfgutier@gmail.com</p>
+			</div>
+		</section>
+
 		<header>
-			Phylosophy
+			Philosophy
 		</header>
+
+		<section id="philosophySection">
+				<p>this is an about me where I go more in depth into who I am, my guiding principles, and specific hard skills.</p>
+		</section>
 
 
 
