--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 
 	<div id="topLine"></div>
 
-	<div id="container">
+	<div class="container">
 		
 		<nav id="navBar">
-			<section>
+			<div>
 				<p>Carlos Gutierrez</p>
 				<br>
 				<p>Engineer + Researcher</p>
-			</section>
+			</div>
 
-			<section id="buttonsSection">
+			<div id="buttonsSection">
 				<div id="navButtons">
 					<div>About</div>
 					<div>Portfolio</div>
 					<div>carlosfgutier@gmail.com</div>
 				</div>
-			</section>
+			</div>
 		</nav>
 
 		<main id="aboutInfo">
@@ -140,11 +140,36 @@
 		<section id="philosophySection">
 				<p>this is an about me where I go more in depth into who I am, my guiding principles, and specific hard skills.</p>
 		</section>
-
-
-
-
 	</div>
+
+	<footer>
+		<div class="container">
+			<div id="fInfo">
+				<p>Carlos Gutierrez</p>
+				<br>
+				<p>carlosfgutier@gmail.com</p>
+				<br>
+				<br>
+				<p>I am a Colombian web developer in Austin, excited to decipher the code to the most complex designs.</p>
+			</div>
+
+			<div id="suffix">
+					<div>
+						Menu
+					</div>
+					
+					<div>
+						Social
+					</div>
+
+					<div>
+						Contact
+					</div>
+			</div>
+
+			<p>© Carlos Gutierrez 2018</p>
+		</div>
+	</footer>
 
 </body>
 </html>
