--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 			<div>
 				<p>Carlos Gutierrez</p>
 				<br>
-				<p>Engineer + Researcher</p>
+				<p class="gray">Engineer + Researcher</p>
 			</div>
 
 			<div id="buttonsSection">
 				<div id="navButtons">
 					<div>About</div>
 					<div>Portfolio</div>
-					<div>carlosfgutier@gmail.com</div>
+					<div class="gray">carlosfgutier@gmail.com</div>
 				</div>
 			</div>
 		</nav>
@@ -86,18 +86,18 @@
 
 		<section id="skillsSection">
 			<div class="skills">
-				<p>I understand the challenges in programming that often seem to limit creativity. I find solutions to this challenges while making code a work of art.</p>
+				<p class="lh40">I understand the challenges in programming that often seem to limit creativity. I find solutions to this challenges while making code a work of art.</p>
 			</div>
 
 			<div class="skills">
 				<div class="soft">
 					<h3>Communication</h3>
-					<p>hi my name is carlos</p>
+					<p class="lh40">hi my name is carlos</p>
 				</div>
 
 				<div class="soft">
 					<h3>Organization</h3>
-					<p>hi my mane is carlos agian</p>
+					<p class="lh40">hi my mane is carlos agian</p>
 				</div>
 			</div>
 		</section>
@@ -110,8 +110,8 @@
 			<div id="featured">
 				<p>hi this is a good one</p>
 			</div>
-			<p>Virtual Reality Research</p>
-			<p>Description of project</p>
+			<p class="darker lh40">Virtual Reality Research</p>
+			<p class="lh40">Description of project</p>
 		</section>
 
 		<header>
@@ -119,7 +119,7 @@
 		</header>
 
 		<section id="socialSection">
-			<div class="social">
+			<div class="social lh40">
 				<ul>
 					<li><a href="#"></a>GitHub</li>
 					<li><a href="#"></a>LinkedIn</li>
@@ -127,9 +127,9 @@
 				</ul>
 				
 			</div>
-			<div class="social">
+			<div class="social lh40">
 				<p>Get in touch:</p>
-				<p>carlosfgutier@gmail.com</p>
+				<p class="pink">carlosfgutier@gmail.com</p>
 			</div>
 		</section>
 
@@ -138,36 +138,36 @@
 		</header>
 
 		<section id="philosophySection">
-				<p>this is an about me where I go more in depth into who I am, my guiding principles, and specific hard skills.</p>
+				<p class="lh40">this is an about me where I go more in depth into who I am, my guiding principles, and specific hard skills.</p>
 		</section>
 	</div>
 
 	<footer>
 		<div class="container">
-			<div id="fInfo">
+			<div id="fInfo" class="lh40">
 				<p>Carlos Gutierrez</p>
+				<p class="pink">carlosfgutier@gmail.com</p>
 				<br>
-				<p>carlosfgutier@gmail.com</p>
-				<br>
-				<br>
-				<p>I am a Colombian web developer in Austin, excited to decipher the code to the most complex designs.</p>
+				<p class="gray">I am a Colombian web developer in Austin, excited to decipher the code to the most complex designs.</p>
 			</div>
+			
+			<br>
 
 			<div id="suffix">
 					<div>
-						Menu
+						<p>Menu</p>
 					</div>
 					
 					<div>
-						Social
+						<p>Social</p>
 					</div>
 
 					<div>
-						Contact
+						<p>Contact</p>
 					</div>
 			</div>
 
-			<p>© Carlos Gutierrez 2018</p>
+			<p class="dark">© Carlos Gutierrez 2018</p>
 		</div>
 	</footer>
 
