finished text hover animations

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 			<div id="buttonsSection">
 				<div id="navButtons">
-					<div>About</div>
-					<div>Portfolio</div>
-					<div class="gray">carlosfgutier@gmail.com</div>
+					<div class="pinkHover">About</div>
+					<div class="pinkHover">Projects</div>
+					<div class="gray hover">carlosfgutier@gmail.com</div>
 				</div>
 			</div>
 		</nav>
@@ -60,7 +60,7 @@
 					<p>Size</p>
 				</div>
 				<div class="project">
-					VR Researc
+					VR Research
 				</div>
 				<div class="project">
 					hi
@@ -110,7 +110,7 @@
 			<div id="featured">
 				<p>hi this is a good one</p>
 			</div>
-			<p class="darker lh40">Virtual Reality Research</p>
+			<p><a class="darker hover lh40" href="#">Virtual Reality Research</a></p>
 			<p class="lh40">Description of project</p>
 		</section>
 
@@ -121,15 +121,15 @@
 		<section id="socialSection">
 			<div class="social lh40">
 				<ul>
-					<li><a href="#"></a>GitHub</li>
-					<li><a href="#"></a>LinkedIn</li>
-					<li><a href="#"></a>Twitter</li>
+					<li><a class="dark hover" href="#">GitHub</a></li>
+					<li><a class="dark hover" href="#">LinkedIn</a></li>
+					<li><a class="dark hover" href="#">Twitter</a></li>
 				</ul>
 				
 			</div>
 			<div class="social lh40">
 				<p>Get in touch:</p>
-				<p class="pink">carlosfgutier@gmail.com</p>
+				<p class="pink hover">carlosfgutier@gmail.com</p>
 			</div>
 		</section>
 
@@ -146,24 +146,38 @@
 		<div class="container">
 			<div id="fInfo" class="lh40">
 				<p>Carlos Gutierrez</p>
-				<p class="pink">carlosfgutier@gmail.com</p>
+				<p class="pink hover">carlosfgutier@gmail.com</p>
 				<br>
 				<p class="gray">I am a Colombian web developer in Austin, excited to decipher the code to the most complex designs.</p>
 			</div>
 			
 			<br>
 
-			<div id="suffix">
+			<div id="suffix" class="lh40">
 					<div>
 						<p>Menu</p>
+						<ul class="gray">
+							<li class="hover">About</li>
+							<li class="hover">Projects</li>
+						</ul>
 					</div>
 					
 					<div>
 						<p>Social</p>
+						<ul>
+							<li><a class="gray hover" href="#">GitHub</a></li>
+							<li><a class="gray hover" href="#">LinkedIn</a></li>
+							<li><a class="gray hover" href="#">Twitter</a></li>
+						</ul>
 					</div>
 
 					<div>
 						<p>Contact</p>
+						<ul class="gray">
+							<li class="hover">carlosfgutier@gmail.com</li>
+							<li class="hover">@cananology</li>
+						</ul>
+
 					</div>
 			</div>
 
