began writing content

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 					I design, build, and play with full stack applications. I write code that is clear and efficient, and like to have fun with it.
 					<br>
 					<br>
-					As a researcher my focus is the interaction between people and newer technologies such as Virtual Reality and emoji. 🤖
+					As a researcher I study interactions between people and newer technologies such as Virtual Reality and emoji. 🤖
 				</p>
 			</div>
 		</main>
 
 		<nav id="downArrow">
 			<p>Learn more about what I do...</p>
-			<img style="width: 30px; height: auto;" src="assets/images/aDown.png" alt="arrow pointing down">
+			<img style="width: 40px; height: 30px;" src="assets/images/aDown.png" alt="arrow pointing down">
 		</nav>
 
 		<header>
@@ -91,12 +91,27 @@
 
 			<div class="skills">
 				<div class="soft">
-					<h3>Communication</h3>
+					<h3>Collaboration</h3>
 					<p class="lh40">hi my name is carlos</p>
 				</div>
 
 				<div class="soft">
+					<h3>Communication</h3>
+					<p class="lh40">hi my mane is carlos agian</p>
+				</div>
+
+				<div class="soft">
 					<h3>Organization</h3>
+					<p class="lh40">hi my mane is carlos agian</p>
+				</div>
+
+				<div class="soft">
+					<h3>Time Managenment</h3>
+					<p class="lh40">hi my mane is carlos agian</p>
+				</div>
+
+				<div class="soft">
+					<h3>Creativity</h3>
 					<p class="lh40">hi my mane is carlos agian</p>
 				</div>
 			</div>
