finished linking to external sources

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div id="navButtons">
 					<div class="pinkHover">About</div>
 					<div class="pinkHover">Projects</div>
-					<div class="gray hover">carlosfgutier@gmail.com</div>
+					<div><a class="gray hover" href="mailto:carlosfgutier@gmail.com">carlosfgutier@gmail.com</a></div>
 				</div>
 			</div>
 		</nav>
@@ -91,28 +91,28 @@
 
 			<div class="skills">
 				<div class="soft">
-					<h3>Collaboration</h3>
-					<p class="lh40">hi my name is carlos</p>
-				</div>
-
-				<div class="soft">
 					<h3>Communication</h3>
-					<p class="lh40">hi my mane is carlos agian</p>
+					<p class="lh40">I realize the importance of good communication. I use tools like Slack and Trello to make sure we're always on the same page.</p>
 				</div>
 
 				<div class="soft">
 					<h3>Organization</h3>
-					<p class="lh40">hi my mane is carlos agian</p>
+					<p class="lh40">I believe it's important to stay organized and adhere to best pratices in code and design.</p>
+				</div>
+
+				<div class="soft">
+					<h3>Collaboration</h3>
+					<p class="lh40">I play well with others. I enjoy working with people who are passionate about what they do.</p>
+				</div>
+
+				<div class="soft">
+					<h3>Design</h3>
+					<p class="lh40">While I am not a web designer, I have an eye for good design. I'm comfortable with Adobe XD, Gimp, and Proto.io and can take designs from mock-up to implementation.</p>
 				</div>
 
 				<div class="soft">
 					<h3>Time Managenment</h3>
-					<p class="lh40">hi my mane is carlos agian</p>
-				</div>
-
-				<div class="soft">
-					<h3>Creativity</h3>
-					<p class="lh40">hi my mane is carlos agian</p>
+					<p class="lh40">I value time and aim to work efficiently. I set goals that help me focus on what is most important.</p>
 				</div>
 			</div>
 		</section>
@@ -125,8 +125,10 @@
 			<div id="featured">
 				<p>hi this is a good one</p>
 			</div>
-			<p><a class="darker hover lh40" href="#">Virtual Reality Research</a></p>
-			<p class="lh40">Description of project</p>
+			<p><a class="darker hover lh40" href="#">Three Virtual Acts of Kindness</a></p>
+			<p id="ftSummary">
+				This was a study of the ability of the Three Kind Acts intervention to increse subjective happiness when administered in Virtual Reality.
+			</p>
 		</section>
 
 		<header>
@@ -136,15 +138,23 @@
 		<section id="socialSection">
 			<div class="social lh40">
 				<ul>
-					<li><a class="dark hover" href="#">GitHub</a></li>
-					<li><a class="dark hover" href="#">LinkedIn</a></li>
-					<li><a class="dark hover" href="#">Twitter</a></li>
+					<li>
+						<a class="dark hover" href="https://github.com/carlosfgutie">GitHub</a>
+					</li>
+					<li>
+						<a class="dark hover" href="https://www.linkedin.com/in/carlosfgutier/">LinkedIn</a>
+					</li>
+					<li>
+						<a class="dark hover" href="https://twitter.com/cccarfer">Twitter</a>
+					</li>
 				</ul>
 				
 			</div>
 			<div class="social lh40">
 				<p>Get in touch:</p>
-				<p class="pink hover">carlosfgutier@gmail.com</p>
+				<p>
+					<a class="pink hover" href="mailto:carlosfgutier@gmail.com">carlosfgutier@gmail.com</a>
+				</p>
 			</div>
 		</section>
 
@@ -161,7 +171,9 @@
 		<div class="container">
 			<div id="fInfo" class="lh40">
 				<p>Carlos Gutierrez</p>
-				<p class="pink hover">carlosfgutier@gmail.com</p>
+				<p>
+					<a class="pink hover" href="mailto:carlosfgutier@gmail.com">carlosfgutier@gmail.com</a>
+				</p>
 				<br>
 				<p class="gray">I am a Colombian web developer in Austin, excited to decipher the code to the most complex designs.</p>
 			</div>
@@ -180,17 +192,27 @@
 					<div>
 						<p>Social</p>
 						<ul>
-							<li><a class="gray hover" href="#">GitHub</a></li>
-							<li><a class="gray hover" href="#">LinkedIn</a></li>
-							<li><a class="gray hover" href="#">Twitter</a></li>
+							<li>
+								<a class="gray hover" href="https://github.com/carlosfgutier">GitHub</a>
+							</li>
+							<li>
+								<a class="gray hover" href="https://www.linkedin.com/in/carlosfgutier/">LinkedIn</a>
+							</li>
+							<li>
+								<a class="gray hover" href="https://twitter.com/cccarfer">Twitter</a>
+							</li>
 						</ul>
 					</div>
 
 					<div>
 						<p>Contact</p>
 						<ul class="gray">
-							<li class="hover">carlosfgutier@gmail.com</li>
-							<li class="hover">@cananology</li>
+							<li>
+								<a class="gray hover" href="mailto:carlosfgutier@gmail.com">carlosfgutier@gmail.com</a>
+							</li>
+							<li>
+								<a class="gray hover" href="https://twitter.com/cccarfer">@cccarfer</a>
+							</li>
 						</ul>
 
 					</div>
