--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 			<br>
 			<div id="short">
 				<p>
-					I design, build, and play with full stack applications. I write code that is clear and efficient, and like to have fun with it.
+					I design, build, and play with full stack applications. I write code that is clear and efficient and have fun doing it. 
 					<br>
 					<br>
-					As a researcher I study interactions between people and newer technologies such as Virtual Reality and emoji. 🤖
+					As a researcher, I study interactions between people and newer technologies such as Virtual Reality and emoji. 🤖
 				</p>
 			</div>
 		</main>
@@ -51,31 +51,44 @@
 		</nav>
 
 		<header>
-			Recent Work
+			<p>Recent Work</p> 
+			<p style="font-size: 10px;">(These indigo squares are in the process of becoming something beautiful 🦋).</p>
 		</header>
 
 		<section id="portfolioSection">
 			<div class="portRow">
 				<div id="size" class="project">
-					<p>Size</p>
+					<p>
+						<a class="white whiteHover" href="https://mighty-depths-40970.herokuapp.com/">Size</a>
+					</p>
 				</div>
 				<div class="project">
-					VR Research
+					<p>
+						<a class="white whiteHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
+					</p>
 				</div>
 				<div class="project">
-					hi
+					<p>
+						<a class="white whiteHover" href="https://carlosfgutier.github.io/Rupee_Collector/">Rupee Collector</a>
+					</p>
 				</div>
 			</div>
 
 			<div class="portRow">
 				<div class="project">
-					hi
+					<p>
+						<a class="white whiteHover" href="https://carlosfgutier.github.io/Hangman_Game/">Hangman</a>
+					</p>
 				</div>
 				<div class="project">
-					hi
+					<p>
+						<a class="white whiteHover" href="https://carlosfgutier.github.io/RunTron/">RunTron</a>
+					</p>
 				</div>
 				<div class="project">
-					hi
+					<p>
+						<a class="white whiteHover" href="https://carlosfgutier.github.io/PsychicGame/">Psychic</a>
+					</p>
 				</div>
 			</div>
 		</section>
@@ -97,7 +110,7 @@
 
 				<div class="soft">
 					<h3>Organization</h3>
-					<p class="lh40">I believe it's important to stay organized and adhere to best pratices in code and design.</p>
+					<p class="lh40">I believe it's important to stay organized and adhere to best practices in code and design.</p>
 				</div>
 
 				<div class="soft">
@@ -111,19 +124,22 @@
 				</div>
 
 				<div class="soft">
-					<h3>Time Managenment</h3>
+					<h3>Time Management</h3>
 					<p class="lh40">I value time and aim to work efficiently. I set goals that help me focus on what is most important.</p>
 				</div>
 			</div>
 		</section>
 
 		<header>
-			Featured Project
+			<p>Featured Project</p>
+			<p style="font-size: 10px;">(This indigo square is in the process of becoming something beautiful 🦋).</p>
 		</header>
 
 		<section id="ftSection">
 			<div id="featured">
-				<p>hi this is a good one</p>
+				<p>
+					<a class="white whiteHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
+				</p>
 			</div>
 			<p><a class="darker hover lh40" href="#">Three Virtual Acts of Kindness</a></p>
 			<p id="ftSummary">
@@ -163,7 +179,9 @@
 		</header>
 
 		<section id="philosophySection">
-				<p class="lh40">this is an about me where I go more in depth into who I am, my guiding principles, and specific hard skills.</p>
+			<p class="lh40">
+				I am a developer and a researcher. Web development and research demand many of the same skills, and both are essential when creating a great product. The best user experience comes from a strong understanding of the needs of the user and code that does what it is intended to do. Good practices are the result of learning and experimenting over time, isolating variables, and identifying what works. Human behavior and technology progressively become more intertwined, understanding both is the key to creating tools that make life better and keep us engaged.
+			</p>
 		</section>
 	</div>
 
