added links to sections

--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
 
 			<div id="buttonsSection">
 				<div id="navButtons">
-					<div class="pinkHover">About</div>
-					<div class="pinkHover">Projects</div>
-					<div><a class="gray hover" href="mailto:carlosfgutier@gmail.com">carlosfgutier@gmail.com</a></div>
+					<div>
+						<a id="about" class="dark pinkHover" href="#topLine">About</a>
+					</div>
+					<div>
+						<a id="about" class="dark pinkHover" href="#recentWork">Projects</a>
+					</div>
+					<div>
+						<a class="gray hover" href="mailto:carlosfgutier@gmail.com">carlosfgutier@gmail.com</a>
+					</div>
 				</div>
 			</div>
 		</nav>
@@ -50,7 +56,7 @@
 			<img style="width: 40px; height: 30px;" src="assets/images/aDown.png" alt="arrow pointing down">
 		</nav>
 
-		<header>
+		<header id="recentWork">
 			<p>Recent Work</p> 
 			<p style="font-size: 10px;">(These indigo squares are in the process of becoming something beautiful 🦋).</p>
 		</header>
@@ -93,7 +99,7 @@
 			</div>
 		</section>
 
-		<header>
+		<header id="skillsHeader">
 			Skills
 		</header>
 
@@ -204,8 +210,15 @@
 					<div>
 						<p>Menu</p>
 						<ul class="gray">
-							<li class="hover">About</li>
-							<li class="hover">Projects</li>
+							<li>
+								<a class="gray hover" href="#topLine">About</a>
+							</li>
+							<li>
+								<a class="gray hover" href="#recentWork">Projects</a>
+							</li>
+							<li>
+								<a class="gray hover" href="#skillsHeader">Skills</a>
+							</li>
 						</ul>
 					</div>
 					
