added gradient squares to page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
 					As a researcher, I study interactions between people and newer technologies such as Virtual Reality and emoji. 🤖
 				</p>
 			</div>
+			<div id="gradientBlock1">
+				<br>
+			</div>
+			<div id="pinkSquare1">
+				<br>
+			</div>
 		</main>
 
 		<nav id="downArrow">
