--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
 			<div class="portRow">
 				<div id="size" class="project">
 					<p>
-						<a class="white whiteHover" href="https://mighty-depths-40970.herokuapp.com/">Size</a>
+						<a class="pink pinkHover" href="https://mighty-depths-40970.herokuapp.com/">Size</a>
 					</p>
 				</div>
 				<div class="project">
 					<p>
-						<a class="white whiteHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
+						<a class="pink pinkHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
 					</p>
 				</div>
 				<div class="project">
 					<p>
-						<a class="white whiteHover" href="https://carlosfgutier.github.io/Rupee_Collector/">Rupee Collector</a>
+						<a class="pink pinkHover" href="https://carlosfgutier.github.io/Rupee_Collector/">Rupee Collector</a>
 					</p>
 				</div>
 			</div>
@@ -89,17 +89,17 @@
 			<div class="portRow">
 				<div class="project">
 					<p>
-						<a class="white whiteHover" href="https://carlosfgutier.github.io/Hangman_Game/">Hangman</a>
+						<a class="pink pinkHover" href="https://carlosfgutier.github.io/Hangman_Game/">Hangman</a>
 					</p>
 				</div>
 				<div class="project">
 					<p>
-						<a class="white whiteHover" href="https://carlosfgutier.github.io/RunTron/">RunTron</a>
+						<a class="pink pinkHover" href="https://carlosfgutier.github.io/RunTron/">RunTron</a>
 					</p>
 				</div>
 				<div class="project">
 					<p>
-						<a class="white whiteHover" href="https://carlosfgutier.github.io/PsychicGame/">Psychic</a>
+						<a class="pink pinkHover" href="https://carlosfgutier.github.io/PsychicGame/">Psychic</a>
 					</p>
 				</div>
 			</div>
@@ -150,7 +150,7 @@
 		<section id="ftSection">
 			<div id="featured">
 				<p>
-					<a class="white whiteHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
+					<a class="pink pinkHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
 				</p>
 			</div>
 			<p><a class="darker hover lh40" href="#">Three Virtual Acts of Kindness</a></p>
