removed bg boxes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<link rel="shortcut icon" type="png" href="assets/images/favicon.png"/>
 
 	<link rel="stylesheet" href="assets/css/reset.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/parallax.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/responsive.css" type="text/css">
 
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300" rel="stylesheet">
 </head>
@@ -49,12 +51,12 @@
 					As a researcher, I study interactions between people and newer technologies such as Virtual Reality and emoji. 🤖
 				</p>
 			</div>
-			<div id="gradientBlock1">
+			<!-- <div id="gradientBlock1">
 				<br>
 			</div>
 			<div id="pinkSquare1">
 				<br>
-			</div>
+			</div> -->
 		</main>
 
 		<nav id="downArrow">
