--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 		<header id="recentWork">
 			<p>Recent Work</p> 
-			<p style="font-size: 10px;">(These indigo squares are in the process of becoming something beautiful 🦋).</p>
+			<p style="font-size: 10px;">(These squares are in the process of becoming something beautiful 🦋).</p>
 		</header>
 
 		<section id="portfolioSection">
@@ -146,7 +146,7 @@
 
 		<header>
 			<p>Featured Project</p>
-			<p style="font-size: 10px;">(This indigo square is in the process of becoming something beautiful 🦋).</p>
+			<p style="font-size: 10px;">(This square is in the process of becoming something beautiful 🦋).</p>
 		</header>
 
 		<section id="ftSection">
