halfway responsive test

--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
 
 		<nav id="downArrow">
 			<p>Learn more about what I do...</p>
-			<img style="width: 40px; height: 30px;" src="assets/images/aDown.png" alt="arrow pointing down">
+			<img src="assets/images/aDown.png" alt="arrow pointing down">
 		</nav>
 
 		<header id="recentWork">
 			<p>Recent Work</p> 
-			<p style="font-size: 10px;">(These squares are in the process of becoming something beautiful 🦋).</p>
 		</header>
 
 		<section id="portfolioSection">
@@ -146,7 +145,6 @@
 
 		<header>
 			<p>Featured Project</p>
-			<p style="font-size: 10px;">(This square is in the process of becoming something beautiful 🦋).</p>
 		</header>
 
 		<section id="ftSection">
@@ -155,7 +153,7 @@
 					<a class="pink pinkHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
 				</p>
 			</div>
-			<p><a class="darker hover lh40" href="#">Three Virtual Acts of Kindness</a></p>
+			<p><a id="ftTitle" class="darker hover lh40" href="#">Three Virtual Acts of Kindness</a></p>
 			<p id="ftSummary">
 				This was a study of the ability of the Three Kind Acts intervention to increse subjective happiness when administered in Virtual Reality.
 			</p>
