simple responsive design finished

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			</p>
 		</section>
 
-		<header>
+		<header id="socialHeader">
 			Social
 		</header>
 
@@ -214,7 +214,7 @@
 
 			<div id="suffix" class="lh40">
 					<div>
-						<p>Menu</p>
+						<p class="marginTop5em">Menu</p>
 						<ul class="gray">
 							<li>
 								<a class="gray hover" href="#topLine">About</a>
@@ -229,7 +229,7 @@
 					</div>
 					
 					<div>
-						<p>Social</p>
+						<p class="marginTop5em">Social</p>
 						<ul>
 							<li>
 								<a class="gray hover" href="https://github.com/carlosfgutier">GitHub</a>
@@ -244,7 +244,7 @@
 					</div>
 
 					<div>
-						<p>Contact</p>
+						<p class="marginTop5em">Contact</p>
 						<ul class="gray">
 							<li>
 								<a class="gray hover" href="mailto:carlosfgutier@gmail.com">carlosfgutier@gmail.com</a>
