added parallax background to responsive layout

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
 
 		<section id="portfolioSection">
 			<div class="portRow">
-				<div id="size" class="project">
+				<div id="size" class="project parallax-bg">
 					<p>
 						<a class="pink pinkHover" href="https://mighty-depths-40970.herokuapp.com/">Size</a>
 					</p>
 				</div>
-				<div class="project">
+				<div class="project parallax-bg">
 					<p>
 						<a class="pink pinkHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
 					</p>
 				</div>
-				<div class="project">
+				<div class="project parallax-bg">
 					<p>
 						<a class="pink pinkHover" href="https://carlosfgutier.github.io/Rupee_Collector/">Rupee Collector</a>
 					</p>
@@ -88,17 +88,17 @@
 			</div>
 
 			<div class="portRow">
-				<div class="project">
+				<div class="project parallax-bg">
 					<p>
 						<a class="pink pinkHover" href="https://carlosfgutier.github.io/Hangman_Game/">Hangman</a>
 					</p>
 				</div>
-				<div class="project">
+				<div class="project parallax-bg">
 					<p>
 						<a class="pink pinkHover" href="https://carlosfgutier.github.io/RunTron/">RunTron</a>
 					</p>
 				</div>
-				<div class="project">
+				<div class="project parallax-bg">
 					<p>
 						<a class="pink pinkHover" href="https://carlosfgutier.github.io/PsychicGame/">Psychic</a>
 					</p>
@@ -148,7 +148,7 @@
 		</header>
 
 		<section id="ftSection">
-			<div id="featured">
+			<div id="featured" class="parallax-bg">
 				<p>
 					<a class="pink pinkHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
 				</p>
@@ -260,6 +260,9 @@
 			<p class="dark">© Carlos Gutierrez 2018</p>
 		</div>
 	</footer>
+
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+	<script type="text/javascript" src="assets/js/parallax.js"></script>
 
 </body>
 </html>
