--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
 			<div class="portRow">
 				<div id="size" class="project parallax-bg">
 					<p>
-						<a class="pink pinkHover" href="https://mighty-depths-40970.herokuapp.com/">Size</a>
+						<a class="projectName pink pinkHover" href="https://mighty-depths-40970.herokuapp.com/">Size</a>
 					</p>
 				</div>
 				<div class="project parallax-bg">
 					<p>
-						<a class="pink pinkHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
+						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
 					</p>
 				</div>
 				<div class="project parallax-bg">
 					<p>
-						<a class="pink pinkHover" href="https://carlosfgutier.github.io/Rupee_Collector/">Rupee Collector</a>
+						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/Rupee_Collector/">Rupee Collector</a>
 					</p>
 				</div>
 			</div>
@@ -90,17 +90,17 @@
 			<div class="portRow">
 				<div class="project parallax-bg">
 					<p>
-						<a class="pink pinkHover" href="https://carlosfgutier.github.io/Hangman_Game/">Hangman</a>
+						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/Hangman_Game/">Hangman</a>
 					</p>
 				</div>
 				<div class="project parallax-bg">
 					<p>
-						<a class="pink pinkHover" href="https://carlosfgutier.github.io/RunTron/">RunTron</a>
+						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/RunTron/">RunTron</a>
 					</p>
 				</div>
 				<div class="project parallax-bg">
 					<p>
-						<a class="pink pinkHover" href="https://carlosfgutier.github.io/PsychicGame/">Psychic</a>
+						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/PsychicGame/">Psychic</a>
 					</p>
 				</div>
 			</div>
@@ -150,7 +150,7 @@
 		<section id="ftSection">
 			<div id="featured" class="parallax-bg">
 				<p>
-					<a class="pink pinkHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
+					<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
 				</p>
 			</div>
 			<p><a id="ftTitle" class="darker hover lh40" href="#">Three Virtual Acts of Kindness</a></p>
