changed project box border

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
 
 		<section id="portfolioSection">
 			<div class="portRow">
-				<div id="size" class="project parallax-bg">
+				<div id="size" class="project">
 					<p>
 						<a class="projectName pink pinkHover" href="https://mighty-depths-40970.herokuapp.com/">Size</a>
 					</p>
 				</div>
-				<div class="project parallax-bg">
+				<div class="project">
 					<p>
 						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/VR_Research/">Three Virtual Acts of Kindness</a>
 					</p>
 				</div>
-				<div class="project parallax-bg">
+				<div class="project">
 					<p>
 						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/Rupee_Collector/">Rupee Collector</a>
 					</p>
@@ -88,17 +88,17 @@
 			</div>
 
 			<div class="portRow">
-				<div class="project parallax-bg">
+				<div class="project">
 					<p>
 						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/Hangman_Game/">Hangman</a>
 					</p>
 				</div>
-				<div class="project parallax-bg">
+				<div class="project">
 					<p>
 						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/RunTron/">RunTron</a>
 					</p>
 				</div>
-				<div class="project parallax-bg">
+				<div class="project">
 					<p>
 						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/PsychicGame/">Psychic</a>
 					</p>
