--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 					As a researcher, I study interactions between people and newer technologies such as Virtual Reality and emoji. 🤖
 				</p>
 			</div>
-			<!-- <div id="gradientBlock1">
+			<div class="parallax" id="gradientBlock1">
 				<br>
 			</div>
-			<div id="pinkSquare1">
+			<div class="parallax" id="pinkSquare1">
 				<br>
-			</div> -->
+			</div>
 		</main>
 
 		<nav id="downArrow">
