organized parallax code

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div class="parallax" id="gradientBlock1">
 				<br>
 			</div>
-			<div class="parallax" id="pinkSquare1">
+			<div class="parallax" id="greenSquare1">
 				<br>
 			</div>
 		</main>
@@ -117,26 +117,31 @@
 
 			<div class="skills">
 				<div class="soft">
+					<div class="skill-bg" id="communication-bg"></div>
 					<h3>Communication</h3>
 					<p class="lh40">I realize the importance of good communication. I use tools like Slack and Trello to make sure we're always on the same page.</p>
 				</div>
 
 				<div class="soft">
+					<div class="skill-bg" id="organization-bg"></div>
 					<h3>Organization</h3>
 					<p class="lh40">I believe it's important to stay organized and adhere to best practices in code and design.</p>
 				</div>
 
 				<div class="soft">
+					<div class="skill-bg" id="collaboration-bg"></div>
 					<h3>Collaboration</h3>
 					<p class="lh40">I play well with others. I enjoy working with people who are passionate about what they do.</p>
 				</div>
 
 				<div class="soft">
+					<div class="skill-bg" id="design-bg"></div>
 					<h3>Design</h3>
 					<p class="lh40">While I am not a web designer, I have an eye for good design. I'm comfortable with Adobe XD, Gimp, and Proto.io and can take designs from mock-up to implementation.</p>
 				</div>
 
 				<div class="soft">
+					<div class="skill-bg" id="time-bg"></div>
 					<h3>Time Management</h3>
 					<p class="lh40">I value time and aim to work efficiently. I set goals that help me focus on what is most important.</p>
 				</div>
