removed short paragraph from footer

--- a/index.html
+++ b/index.html
@@ -111,8 +111,17 @@
 		</header>
 
 		<section id="skillsSection">
+			
 			<div class="skills">
 				<p class="lh40">I understand the challenges in programming that often seem to limit creativity. I find solutions to this challenges while making code a work of art.</p>
+				
+				<!-- <menu>
+					<div class="skills_logos_container">
+						<img class="skill_logo" src="./assets/images/logos/HTML.png" alt="HTML Logo">
+						<img class="skill_logo" src="./assets/images/logos/JS.png" alt="">
+						<img class="skill_logo" src="./assets/images/logos/MySQL.png" alt="">
+					</div>
+				</menu> -->
 			</div>
 
 			<div class="skills">
@@ -212,7 +221,7 @@
 					<a class="pink hover" href="mailto:carlosfgutier@gmail.com">carlosfgutier@gmail.com</a>
 				</p>
 				<br>
-				<p class="gray">I am a Colombian web developer in Austin, excited to decipher the code to the most complex designs.</p>
+				<!-- <p class="gray">I am a Colombian web developer in Austin, excited to decipher the code to the most complex designs.</p> -->
 			</div>
 			
 			<br>
