--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="portRow">
 				<div id="size" class="project">
 					<p>
-						<a class="projectName pink pinkHover" href="https://mighty-depths-40970.herokuapp.com/">Size</a>
+						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/Heat_CheckIn/">Heat Bootcamp:<br>Check-In Screen</a>
 					</p>
 				</div>
 				<div class="project">
@@ -95,7 +95,7 @@
 				</div>
 				<div class="project">
 					<p>
-						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/RunTron/">RunTron</a>
+						<a class="projectName pink pinkHover" href="https://carlosfgutier.github.io/RunTron/">StreetTron</a>
 					</p>
 				</div>
 				<div class="project">
