--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div>
 				<p>Carlos Gutierrez</p>
 				<br>
-				<p class="gray">Engineer + Researcher</p>
+				<p class="gray">Web Devleopment + Psychology</p>
 			</div>
 
 			<div id="buttonsSection">
@@ -48,7 +48,7 @@
 					I design, build, and play with full stack applications. I write code that is clear and efficient and have fun doing it. 
 					<br>
 					<br>
-					As a researcher, I study interactions between people and newer technologies such as Virtual Reality and emoji. 🤖
+					As a behavioral researcher, I study interactions between people and newer technologies such as VR and emoji. 🤖
 				</p>
 			</div>
 			<div class="parallax" id="gradientBlock1">
@@ -113,7 +113,7 @@
 		<section id="skillsSection">
 			
 			<div class="skills">
-				<p class="lh40">I understand the challenges in programming that often seem to limit creativity. I find solutions to this challenges while making code a work of art.</p>
+				<p class="lh40">I understand the challenges in programming that often seem to limit creativity. I find solutions to this challenges with code that looks great.</p>
 				
 				<!-- <menu>
 					<div class="skills_logos_container">
